--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
+    "start": "node_modules/.bin/webpack -p",
     "webpack-prod": "node_modules/.bin/webpack -p",
     "webpack-dev": "node_modules/.bin/webpack-dev-server --hot --inline",
     "lint": "node_modules/.bin/eslint  --quiet src/**/*.js",
