prepare server for solving main problems

--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "webpack-prod": "node_modules/.bin/webpack -p",
     "webpack-dev": "node_modules/.bin/webpack-dev-server --hot --inline",
     "lint": "node_modules/.bin/eslint  --quiet src/**/*.js",
-    "lint-fix": "node_modules/.bin/eslint --fix src/**/*.js"
+    "lint-fix": "node_modules/.bin/eslint --fix src/**/*.js",
+    "start-server": "set NODE_ENV=development&&set SITE=https://google.com&&set MONGODB_URI=mongodb://localhost:27017/shop&&set PORT=3001&&nodemon --exec babel-node server.js"
+
   }
 }
