--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "mongoose": "~4.10.8",
     "axios": "~0.16.2",
     "axios-cancel": "^0.2.2",
     "react-maskedinput": "^4.0.1",
@@ -38,6 +39,9 @@
     "react-onclickoutside": "^6.7.1",
     "react-redux": "~5.0.5",
     "react-router-dom": "~4.1.2",
+    "morgan": "~1.7.0",
+    "cors": "~2.8.4",
+    "nodemailer": "~4.1.0",
     "react-router-redux": "~5.0.0-alpha.6",
     "react-textarea-autosize": "^6.1.0",
     "react-tooltip": "^3.6.1",
