--- a/package.json
+++ b/package.json
@@ -17,43 +17,6 @@
   },
   "homepage": "",
   "dependencies": {
-    "mongoose": "~4.10.8",
-    "axios": "~0.16.2",
-    "axios-cancel": "^0.2.2",
-    "react-maskedinput": "^4.0.1",
-    "classnames": "^2.2.5",
-    "dot-prop-immutable": "^1.4.0",
-    "emoji-mart": "^2.8.1",
-    "history": "~4.6.3",
-    "html-react-parser": "^0.4.6",
-    "html-webpack-harddisk-plugin": "^0.1.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.1",
-    "react": "^16.2.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-datepicker": "^1.6.0",
-    "react-dom": "^16.2.0",
-    "react-dropzone": "^4.2.7",
-    "react-hot-loader": "~3.0.0-beta.3",
-    "react-notification-system-redux": "^1.2.0",
-    "react-onclickoutside": "^6.7.1",
-    "react-redux": "~5.0.5",
-    "react-router-dom": "~4.1.2",
-    "morgan": "~1.7.0",
-    "cors": "~2.8.4",
-    "nodemailer": "~4.1.0",
-    "react-router-redux": "~5.0.0-alpha.6",
-    "react-textarea-autosize": "^6.1.0",
-    "react-tooltip": "^3.6.1",
-    "react-transition-group": "^1.2.1",
-    "redux": "^3.7.2",
-    "redux-i18n": "^1.5.12",
-    "redux-immutable-state-invariant": "~2.0.0",
-    "redux-thunk": "~2.2.0",
-    "url-search-params-polyfill": "^3.0.0",
-    "uuid": "^3.1.0"
-  },
-  "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "babel-cli": "~6.24.1",
     "babel-core": "~6.24.1",
@@ -98,7 +61,44 @@
     "style-loader": "~0.17.0",
     "url-loader": "~0.5.8",
     "webpack": "~2.2.0",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "mongoose": "~4.10.8",
+    "axios": "~0.16.2",
+    "axios-cancel": "^0.2.2",
+    "react-maskedinput": "^4.0.1",
+    "classnames": "^2.2.5",
+    "dot-prop-immutable": "^1.4.0",
+    "emoji-mart": "^2.8.1",
+    "history": "~4.6.3",
+    "html-react-parser": "^0.4.6",
+    "lodash": "^4.17.5",
+    "moment": "^2.22.1",
+    "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-datepicker": "^1.6.0",
+    "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.7",
+    "react-hot-loader": "~3.0.0-beta.3",
+    "react-notification-system-redux": "^1.2.0",
+    "react-onclickoutside": "^6.7.1",
+    "react-redux": "~5.0.5",
+    "react-router-dom": "~4.1.2",
+    "morgan": "~1.7.0",
+    "cors": "~2.8.4",
+    "nodemailer": "~4.1.0",
+    "react-router-redux": "~5.0.0-alpha.6",
+    "react-textarea-autosize": "^6.1.0",
+    "react-tooltip": "^3.6.1",
+    "react-transition-group": "^1.2.1",
+    "redux": "^3.7.2",
+    "redux-i18n": "^1.5.12",
+    "redux-immutable-state-invariant": "~2.0.0",
+    "redux-thunk": "~2.2.0",
+    "url-search-params-polyfill": "^3.0.0",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1"
   },
   "scripts": {
     "webpack-prod": "node_modules/.bin/webpack -p",
