--- a/package.json
+++ b/package.json
@@ -95,7 +95,47 @@
     "redux-immutable-state-invariant": "~2.0.0",
     "redux-thunk": "~2.2.0",
     "url-search-params-polyfill": "^3.0.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+
+
+
+
+
+
+    "babel": "~6.23.0",
+    "bcrypt": "~1.0.2",
+    "bluebird": "~3.5.0",
+    "body-parser": "~1.15.2",
+    "cssnano": "~3.10.0",
+    "ejs": "^2.5.7",
+    "eslint-config-airbnb-base": "~11.3.1",
+    "eslint-config-prettier": "~2.3.0",
+    "eslint-find-rules": "~3.1.1",
+    "expect": "~1.20.2",
+    "express": "~4.14.0",
+    "express-session": "~1.14.1",
+    "immutable": "~3.8.1",
+    "jquery": "~3.2.1",
+    "jsonwebtoken": "~7.3.0",
+    "mocha": "~3.5.0",
+    "nodemon": "~1.11.0",
+    "password-hash": "~1.2.2",
+    "postcss-mixins": "~6.0.0",
+    "precss": "~1.4.0",
+    "prerender-node": "^3.1.1",
+    "query-string": "^5.0.1",
+    "react-addons-transition-group": "~15.6.0",
+    "react-dropdown": "~1.2.5",
+    "react-image-gallery": "^0.8.10",
+    "react-notification-system": "^0.2.16",
+    "react-paginate": "^5.0.0",
+    "react-redux-loading-bar": "~2.9.2",
+    "react-router": "~4.1.2",
+    "react-slick": "~0.14.11",
+    "redux-devtools": "~3.4.0",
+    "rimraf": "~2.6.1",
+    "supertest": "~2.0.0",
+    "token-generator": "~1.0.0",
   },
   "devDependencies": {
     "babel-cli": "^6.24.1"
