--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "redux-devtools": "~3.4.0",
     "rimraf": "~2.6.1",
     "supertest": "~2.0.0",
-    "token-generator": "~1.0.0",
+    "token-generator": "~1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1"
