--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "landing",
   "version": "1.0.0",
   "description": "ho-ho",
-  "main": "webpack.config.js",
+  "main": "s.js",
   "engines": {
     "node": "~7.0.0"
   },
@@ -17,13 +17,13 @@
   },
   "homepage": "",
   "dependencies": {
-    "assets-webpack-plugin": "^3.5.1",
+    "assets-webpack-plugin": "~3.5.1",
+    "axios": "~0.16.2",
+    "babel": "~6.23.0",
     "babel-cli": "~6.24.1",
     "babel-core": "~6.24.1",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "~7.1.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "~1.6.0",
+    "babel-eslint": "~7.2.3",
+    "babel-loader": "~7.0.0",
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-es2016": "~6.24.1",
     "babel-preset-es2017": "~6.24.1",
@@ -31,111 +31,78 @@
     "babel-preset-stage-0": "~6.24.1",
     "babel-preset-stage-1": "~6.24.1",
     "babel-preset-stage-2": "~6.24.1",
-    "babel-register": "~6.26.0",
-    "clean-webpack-plugin": "~0.1.16",
-    "css-loader": "~0.28.1",
-    "cssnext": "~1.8.4",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "~16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "~2.7.0",
-    "eslint-plugin-jsx-a11y": "~6.0.2",
-    "eslint-plugin-prettier": "~2.3.1",
-    "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "~2.1.2",
-    "file-loader": "~0.11.1",
-    "html-loader": "^0.4.4",
-    "html-webpack-exclude-assets-plugin": "0.0.5",
-    "html-webpack-harddisk-plugin": "^0.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jade": "^1.11.0",
-    "jade-loader": "^0.8.0",
-    "less": "~2.7.2",
-    "less-loader": "~4.0.5",
-    "node-sass": "~4.5.3",
-    "postcss-loader": "~2.0.5",
-    "postcss-smart-import": "~0.7.4",
-    "prettier": "~1.7.4",
-    "prop-types": "^15.6.0",
-    "sass-loader": "~6.0.6",
-    "style-loader": "~0.17.0",
-    "url-loader": "~0.5.8",
-    "webpack": "~2.2.0",
-    "webpack-dev-server": "^2.6.1",
-    "mongoose": "~4.10.8",
-    "axios": "~0.16.2",
-    "axios-cancel": "^0.2.2",
-    "react-maskedinput": "^4.0.1",
-    "classnames": "^2.2.5",
-    "dot-prop-immutable": "^1.4.0",
-    "emoji-mart": "^2.8.1",
-    "history": "~4.6.3",
-    "html-react-parser": "^0.4.6",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.1",
-    "react": "^16.2.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-datepicker": "^1.6.0",
-    "react-dom": "^16.2.0",
-    "react-dropzone": "^4.2.7",
-    "react-hot-loader": "~3.0.0-beta.3",
-    "react-notification-system-redux": "^1.2.0",
-    "react-onclickoutside": "^6.7.1",
-    "react-redux": "~5.0.5",
-    "react-router-dom": "~4.1.2",
-    "morgan": "~1.7.0",
-    "cors": "~2.8.4",
-    "nodemailer": "~4.1.0",
-    "react-router-redux": "~5.0.0-alpha.6",
-    "react-textarea-autosize": "^6.1.0",
-    "react-tooltip": "^3.6.1",
-    "react-transition-group": "^1.2.1",
-    "redux": "^3.7.2",
-    "redux-i18n": "^1.5.12",
-    "redux-immutable-state-invariant": "~2.0.0",
-    "redux-thunk": "~2.2.0",
-    "url-search-params-polyfill": "^3.0.0",
-    "uuid": "^3.1.0",
-
-
-
-
-
-
-    "babel": "~6.23.0",
     "bcrypt": "~1.0.2",
     "bluebird": "~3.5.0",
     "body-parser": "~1.15.2",
+    "clean-webpack-plugin": "~0.1.16",
+    "cors": "~2.8.4",
+    "css-loader": "~0.28.1",
     "cssnano": "~3.10.0",
+    "cssnext": "~1.8.4",
     "ejs": "^2.5.7",
+    "eslint": "~4.3.0",
+    "eslint-config-airbnb": "~15.1.0",
     "eslint-config-airbnb-base": "~11.3.1",
     "eslint-config-prettier": "~2.3.0",
     "eslint-find-rules": "~3.1.1",
+    "eslint-plugin-import": "~2.7.0",
+    "eslint-plugin-jsx-a11y": "~6.0.2",
+    "eslint-plugin-react": "~7.1.0",
     "expect": "~1.20.2",
     "express": "~4.14.0",
     "express-session": "~1.14.1",
+    "extract-text-webpack-plugin": "~2.0.0-beta.5",
+    "file-loader": "~0.11.1",
+    "history": "~4.6.3",
     "immutable": "~3.8.1",
     "jquery": "~3.2.1",
     "jsonwebtoken": "~7.3.0",
+    "less": "~2.7.2",
+    "less-loader": "~4.0.3",
+    "lodash": "^4.17.4",
     "mocha": "~3.5.0",
+    "mongoose": "~4.10.8",
+    "morgan": "~1.7.0",
+    "node-sass": "~4.5.3",
+    "nodemailer": "~4.1.0",
     "nodemon": "~1.11.0",
     "password-hash": "~1.2.2",
+    "postcss-loader": "~2.0.5",
     "postcss-mixins": "~6.0.0",
+    "postcss-smart-import": "~0.7.4",
     "precss": "~1.4.0",
     "prerender-node": "^3.1.1",
+    "prop-types": "^15.6.2",
     "query-string": "^5.0.1",
+    "react": "^16.4.2",
+    "react-addons-css-transition-group": "~15.6.0",
     "react-addons-transition-group": "~15.6.0",
+    "react-dom": "^16.4.2",
     "react-dropdown": "~1.2.5",
     "react-image-gallery": "^0.8.10",
+    "react-maskedinput": "^4.0.1",
     "react-notification-system": "^0.2.16",
+    "react-notification-system-redux": "^1.2.0",
     "react-paginate": "^5.0.0",
+    "react-redux": "~5.0.5",
     "react-redux-loading-bar": "~2.9.2",
     "react-router": "~4.1.2",
+    "react-router-dom": "~4.1.2",
+    "react-router-redux": "~5.0.0-alpha.6",
     "react-slick": "~0.14.11",
+    "react-transition-group": "~1.2.0",
+    "redux": "~3.7.2",
     "redux-devtools": "~3.4.0",
+    "redux-immutable-state-invariant": "~2.0.0",
+    "redux-thunk": "~2.2.0",
     "rimraf": "~2.6.1",
+    "sass-loader": "~6.0.6",
+    "style-loader": "~0.17.0",
     "supertest": "~2.0.0",
-    "token-generator": "~1.0.0"
+    "token-generator": "~1.0.0",
+    "url-loader": "~0.5.8",
+    "webpack": "~2.2.0",
+    "webpack-dev-server": "~2.2.0-rc.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1"
