--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "webpack-dev-server": "~2.2.0-rc.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
     "babel-cli": "^6.24.1"
   },
   "scripts": {
