--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "emoji-mart": "^2.8.1",
     "history": "~4.6.3",
     "html-react-parser": "^0.4.6",
-    "html-webpack-harddisk-plugin": "^0.1.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "react": "^16.2.0",
@@ -47,9 +46,7 @@
     "redux-immutable-state-invariant": "~2.0.0",
     "redux-thunk": "~2.2.0",
     "url-search-params-polyfill": "^3.0.0",
-    "uuid": "^3.1.0"
-  },
-  "devDependencies": {
+    "uuid": "^3.1.0",
     "assets-webpack-plugin": "^3.5.1",
     "babel-cli": "~6.24.1",
     "babel-core": "~6.24.1",
