change webpack file

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "lint": "node_modules/.bin/eslint  --quiet src/**/*.js",
     "lint-fix": "node_modules/.bin/eslint --fix src/**/*.js",
     "start-server": "set NODE_ENV=development&&set SITE=https://google.com&&set MONGODB_URI=mongodb://localhost:27017/shop&&set PORT=3001&&nodemon --exec babel-node server.js",
-    "start": "babel-node server.js --presets es2015"
+    "server-prod": "babel-node server.js --presets es2015",
+    "start": "node_modules/.bin/webpack -p && babel-node server.js --presets es2015"
   }
 }
