change node version, v2

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "ho-ho",
   "main": "webpack.config.js",
+  "engines": {
+    "node": "~7.0.0"
+  },
   "repository": {
     "type": "git",
     "url": ""
@@ -146,6 +149,6 @@
     "lint-fix": "node_modules/.bin/eslint --fix src/**/*.js",
     "start-server": "set NODE_ENV=development&&set SITE=https://google.com&&set MONGODB_URI=mongodb://localhost:27017/shop&&set PORT=3001&&nodemon --exec babel-node server.js",
     "server-prod": "babel-node server.js --presets es2015",
-    "start": "node_modules/.bin/webpack -p && babel-node server.js --presets es2015"
+    "start": "babel-node server.js --presets es2015 && node_modules/.bin/webpack -p"
   }
 }
