launch app on different platforms

--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "css-loader": "~0.28.1",
     "cssnext": "~1.8.4",
     "eslint": "^4.9.0",
-
     "extract-text-webpack-plugin": "~2.1.2",
     "file-loader": "~0.11.1",
     "html-loader": "^0.4.4",
@@ -86,20 +85,12 @@
     "style-loader": "~0.17.0",
     "url-loader": "~0.5.8",
     "webpack": "~2.2.0",
-
-
-
-
-
-
-
     "bcrypt": "~1.0.2",
     "bluebird": "~3.5.0",
     "body-parser": "~1.15.2",
     "cors": "~2.8.4",
     "cssnano": "~3.10.0",
     "ejs": "^2.5.7",
-
     "expect": "~1.20.2",
     "express": "~4.14.0",
     "express-session": "~1.14.1",
@@ -110,7 +101,6 @@
     "mongoose": "~4.10.8",
     "morgan": "~1.7.0",
     "nodemailer": "~4.1.0",
-
     "password-hash": "~1.2.2",
     "postcss-mixins": "~6.0.0",
     "precss": "~1.4.0",
@@ -130,26 +120,26 @@
     "token-generator": "~1.0.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.6.1",
-    "nodemon": "~1.11.0",
+    "cross-env": "^5.2.0",
+    "eslint-config-airbnb": "~16.1.0",
     "eslint-config-airbnb-base": "~11.3.1",
     "eslint-config-prettier": "~2.3.0",
     "eslint-find-rules": "~3.1.1",
-    "eslint-config-airbnb": "~16.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "~2.7.0",
     "eslint-plugin-jsx-a11y": "~6.0.2",
     "eslint-plugin-prettier": "~2.3.1",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "nodemon": "~1.11.0",
+    "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
     "webpack-prod": "node_modules/.bin/webpack -p",
     "webpack-dev": "node_modules/.bin/webpack-dev-server --hot --inline",
     "lint": "node_modules/.bin/eslint  --quiet src/**/*.js",
     "lint-fix": "node_modules/.bin/eslint --fix src/**/*.js",
-    "start-server": "set NODE_ENV=development&&set SITE=https://google.com&&set MONGODB_URI=mongodb://localhost:27017/shop&&set PORT=3001&&nodemon --exec babel-node server.js",
+    "start-server": "cross-env  NODE_ENV=development SITE=https://google.com MONGODB_URI=mongodb://127.0.0.1:27017/shop PORT=3001 nodemon --exec babel-node server.js",
     "server-prod": "babel-node server.js --presets es2015",
-
     "postinstall": "node_modules/.bin/webpack -p",
     "start": "babel-node server.js --presets es2015"
   }
